<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardElevation="12dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="-15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/roundedImageView"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_border_color="#333333"
            app:riv_border_width="2dp"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:text="@string/line_item_account_name"
            android:textColor="#ff3a3d40"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/roundedImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/linear_item_time"
            android:textColor="#ff889199"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/linear_item_title"
            android:textStyle="bold"
            android:textColor="#ff3a3d40"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/roundedImageView"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="@+id/text"
            app:layout_constraintTop_toBottomOf="@+id/text"
            app:srcCompat="@drawable/bottom_account" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/linear_item_detail"
            android:textColor="#ff363b40"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/icon"
            app:layout_constraintTop_toBottomOf="@+id/icon" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:srcCompat="@drawable/dislike" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="3dp"
            android:text="@string/linear_item_like"
            android:textColor="#ff889199"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:srcCompat="@drawable/share" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="3dp"
            android:text="@string/linear_item_like"
            android:textColor="#ff889199"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:srcCompat="@drawable/icon_comments" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/linear_item_like"
            android:textColor="#ff889199"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>